2008-08-06  Joshua Sumali  <jsumali@redhat.com>

	* acinclude.m4: Don't bother with GCC_OLD here either.

2008-08-04  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Don't download and extract when an external source dir is
	specified.  Instead, obtain a local copy of the tree.
	* acinclude.m4:
	Use a more meaningful name for the OpenJDK srcdir
	conditional.
	
2008-07-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Add closures and cvmi URL and support
	using them when downloading from Mercurial.
	* acinclude.m4:
	(ENABLE_EXTRA_PROJECTS): Added.
	* configure.ac:
	Enable tests for extra projects and
	correct Mercurial test.

2008-07-23  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-rhino.patch: Updated.

2008-07-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-gcc-4.3.patch,
	* patches/icedtea-sparc.patch: Removed.
	* HACKING: Updated.
	* Makefile.am: Move to b31, remove patches listed above
	and fix escaping on hg clone line.
	* acinclude.m4: Only set ALT_OPENJDK_SRC_ZIP when
	needed.
	* configure.ac: Don't bother with GCC_OLD.
	* patches/icedtea-text-relocations.patch: Reapplied to b31.
	* patches/icedtea-use-system-tzdata.patch: Make solution
	work on g++ 4.3.
	* patches/icedtea-zero-build.patch: Reapplied.
	* fsg.sh: Remove deletion of winver.exe as already removed
	from tarball.
	
2008-07-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-nomotif-6706121.patch,
	* patches/icedtea-nomotif.patch:
	Removed; already present in b30.
	* HACKING: Updated.
	* Makefile.am: Remove unneeded patches.
	* patches/icedtea-ecj.patch,
	* patches/icedtea-jdk-docs-target.patch,
	* patches/icedtea-webstart-umask.patch:
	Fixed to apply against b30.

2008-07-20  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-nomotif-6706121.patch, patches/icedtea-nomotif.patch:
	New.
	* Makefile.am (ICEDTEA_PATCHES): Add patches.
	* configure.ac: Remove lesstif check.